# gen-password

./: .gitignore
backend/: Cargo.toml
backend/rest/: gen_pass.http
backend/src/: lib.rs  main.rs
backend/src/gen_pass/: mod.rs  model.rs  process.rs
frontend/: README.md  bun.lockb  package.json  tsconfig.json
frontend/.husky/: pre-commit
frontend/app/: page.tsx
frontend/components/: passwd-config.tsx  passwd-content.tsx
frontend/lib/: api.ts  store.ts
