[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
http = "1.1.0"
rand = "0.8.5"
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }